Index fixed for multiple entrances, and ready until before 3.1.3.3 Atmospheric Effec and Water

--- a/Acronyms.tex
+++ b/Acronyms.tex
@@ -57,3 +57,18 @@
 
 \newacronym{mcp}{MCP}{modified cubic polynomial equation}
 
+\newacronym{uv}{UV}{ultra-violet}
+
+\newacronym{sm}{SM}{suspended material}
+
+\newacronym{nap}{NAP}{non-algal particles}
+
+\newacronym{doc}{DOC}{dissolved organic carbon}
+
+\newacronym{ys}{YS}{yellow substance}
+
+\newacronym{oacs}{OACs}{active water constituents}
+
+\newacronym{tss}{TSS}{total suspended solids}
+
+\newacronym{par}{PAR}{photosynthetic available radiation}
