--- a/Background_and_Theory.tex
+++ b/Background_and_Theory.tex
@@ -7,7 +7,7 @@ When the target is a water body, besides the traditional concept applied to remo
 % ----------------------------------------------------
 \section{Remote Sensing and Water}
 \subsection{Radiometric Quantities}
-\autoref{fig:radiance} shows the geometry used to define the radiometric quantities. We need to define a fundamental radiometric quantity that specifies completely positional ($x,y,z$), temporal ($t$), directional ($\theta,\phi$) and spectral ($\lambda$) structure of the light field. This is accomplished by the spectral radiance $L$. The {\it spectral radiance} $L$ \index{spectral radiance, $L$} can be defined as (\cite{Mobley:2001})
+\autoref{fig:radiance} shows the geometry used to define the radiometric quantities. We need to define a fundamental radiometric quantity that specifies completely positional ($x,y,z$), temporal ($t$), directional ($\theta,\phi$) and spectral ($\lambda$) structure of the light field. This is accomplished by the spectral radiance $L$. The {\it spectral radiance} $L$ \index{radiance!spectral, $L$} can be defined as (\cite{Mobley:2001})
 \begin{equation}\label{eq:rad1}
   L(x,y,z,t,\theta,\varphi,\lambda)\equiv\frac{\Delta Q}{\Delta t\Delta A\Delta\Omega\Delta\lambda}~~\left[ Js^{-1}m^{-2}sr^{-1}nm^{-1} \right]
 \end{equation}
@@ -32,16 +32,16 @@ In the conceptual limit of infinitesimal parameter interval (\cite{Mobley:2001})
 
 In most oceanographic applications, we can assume that there is horizontal homogeneity and time independence, then the spectral radiance can be written as $L(z,\theta,\phi,\lambda)$, which is consider a one dimensional (1-D) quantity.
 
-Even though the spectral radiance describes completely the light field, it is not commonly used due to instrumentation difficulties or because all that information is probably not needed. Irradiance is a radiometric quantity that is easier to measure and ofter more useful. {\it Irradiance} $E$ is formally defined as
+Even though the spectral radiance describes completely the light field, it is not commonly used due to instrumentation difficulties or because all that information is probably not needed. Irradiance is a radiometric quantity that is easier to measure and ofter more useful. {\it Irradiance}\index{irradiance! $E$} $E$ is formally defined as
 \begin{equation}
   E(x,y,z,t,\lambda) \equiv \frac{\Delta Q}{\Delta t\Delta A\Delta\lambda}~~\left[ W m^{-2}nm^{-1} \right]
 \end{equation}
 
-The most commonly measured radiometric variable is the spectral plane irradiance. A collector surface (detector) is equally sensitive to light from any direction. However, the effective area (a.k.a. projected area) of the detector as seen by light in direction $\theta$ is $\Delta A|\cos{\theta}|$, where $\theta$ is the angle between the photon direction and the normal to the surface of the detector (see \autoref{fig:radiance}). If such a detector is placed at depth $z$ and oriented facing upward, so it detects photon traveling downward, then the detector will be measuring the spectral downwelling plane irradiance $E_d(z,\lambda)$. What this detector is really doing is adding the downwelling radiance weighted by the cosine of the photon direction. Therefore, the {\it spectral downwelling plane irradiance} $E_d(z,\lambda)$ can be defined as
+The most commonly measured radiometric variable is the spectral plane irradiance. A collector surface (detector) is equally sensitive to light from any direction. However, the effective area (a.k.a. projected area) of the detector as seen by light in direction $\theta$ is $\Delta A|\cos{\theta}|$, where $\theta$ is the angle between the photon direction and the normal to the surface of the detector (see \autoref{fig:radiance}). If such a detector is placed at depth $z$ and oriented facing upward, so it detects photon traveling downward, then the detector will be measuring the spectral downwelling plane irradiance $E_d(z,\lambda)$. What this detector is really doing is adding the downwelling radiance weighted by the cosine of the photon direction. Therefore, the {\it spectral downwelling plane irradiance}\index{irradiance!spectral downwelling plane, $E_d(z,\lambda)$} $E_d(z,\lambda)$ can be defined as
 \begin{equation}
   E_{d}(z,\lambda)=\int_{2\pi_d} L(z,\theta,\varphi,\lambda)|cos\theta|d\Omega~~\left[Wm^{-2}nm^{-1} \right]
 \end{equation}
-where $2\pi_d$ denotes the hemisphere of downward directions, i.e. the set of directions ($\theta,\phi$) such that $0\leq\theta\leq\pi/2$ and $0\leq\phi\leq2\pi$, if $\theta$ is measured from $+z$ or nadir direction. If the instrument is placed facing downward, then the spectral upwelling plane irradiance $E_d(z,\lambda)$ is measured. The difference $E_{net}=E_d-E_u$ is named the net downward irradiance.
+where $2\pi_d$ denotes the hemisphere of downward directions, i.e. the set of directions ($\theta,\phi$) such that $0\leq\theta\leq\pi/2$ and $0\leq\phi\leq2\pi$, if $\theta$ is measured from $+z$ or nadir direction. If the instrument is placed facing downward, then the spectral upwelling plane irradiance $E_u(z,\lambda)$ is measured\index{irradiance! spectral upwelling plane, $Eud(z,\lambda)$}. The difference $E_{net}=E_d-E_u$ is named the net downward irradiance\index{irradiance!net downward, $E_{net}$}.
 
 Now, consider a light detector that is equally sensitive to photons in any direction within a hemisphere of directions, i.e. the detector has the same effective area for radiance in any downward direction, so no $\cos{\theta}$ factor is needed. If that detector is placed at depth $z$, oriented facing upward and therefore collection photons coming from the downward direction, then this detector is measuring the spectral downwelling scalar irradiance at depth $z$, $E_{od}(x,\lambda)$. This spectral downwelling scalar irradiance is can be defined as
 \begin{equation}\label{eq:Eod}
@@ -55,14 +55,14 @@ If the same instrument is placed facing downward, it will be measuring the spect
 \end{equation}
 where $2\pi_u$ denotes the hemisphere of upward direction.
 
-The sum of the downwelling and upwelling components can be defined as the {\it spectral scalar irradiance} $E_o(z,\lambda)$, i.e.
+The sum of the downwelling and upwelling components can be defined as the {\it spectral scalar irradiance} $E_o(z,\lambda)$\index{irradiance!spectral scalar, $E_o(z,\lambda)$}, i.e.
 \begin{align}
   E_{o}(z,\lambda) &\equiv E_{od}(z,\lambda)+E_{ou}(z,\lambda)\notag \\
            &=\int_{4\pi} L(z,\theta,\varphi,\lambda)d\Omega
 \end{align}
 The spectral scalar irradiance is the radiometric variable that is most relevant to photosynthesis because photosynthesis is independent of the traveling direction of the light.
 
-Another important radiometric quantity in oceanography is the photosynthetic available radiation (PAR), defined as
+Another important radiometric quantity in oceanography is the \gls{par}\index{PAR}, defined as
 \begin{equation}
   PAR(z)\equiv \int_{350nm}^{700nm} \frac{\lambda}{hc}E_o(z,\lambda)d\lambda~~~\left[photons~s^{-1}m^{-2} \right]
 \end{equation}
@@ -74,7 +74,7 @@ where $h=6.6255\times10^{-34}J~s$ is the Planck constant and $c=3.0\times10^{17}
 % ----------------------------------------------------
 \subsubsection{Exoatmospheric Irradiance}
 
-From the total energy coming from the sun, only approximately 1390 $\left[\frac{W}{m^2}\right]$ reaches the Earth's atmosphere \cite{Schott}. This integrated value is known as the \emph{exoatmospheric irradiance}, or $E_S'$, and represents the total energy per unit area just outside the Earth's atmosphere due to the solar energy. Recall that \emph{irradiance} is the rate at which the radiant flux ($\Phi$) is delivered to a surface ($A$), defined as
+From the total energy coming from the sun, only approximately 1390 $\left[\frac{W}{m^2}\right]$ reaches the Earth's atmosphere \cite{Schott}. This integrated value is known as the \emph{exoatmospheric irradiance}\index{irradiance!exoatmospheric}, or $E_S'$, and represents the total energy per unit area just outside the Earth's atmosphere due to the solar energy. Recall that \emph{irradiance} is the rate at which the radiant flux ($\Phi$) is delivered to a surface ($A$), defined as
 \begin{equation} \label{eq:irradiance}
 E = \frac{d\Phi}{dA}   \indent   \indent  \left[\frac{W}{m^2}\right]  
 \end{equation} 
@@ -91,7 +91,7 @@ So, the $E_S'$ is calculated assuming that the flux $\Phi$ comes from a point so
 % ----------------------------------------------------
 \subsubsection{Solar Energy Paths}
 \label{subsubsec:SolarPaths}
-The main goal of remote sensing is to extract information about a specific target from all information recorded by an imaging system. In order to only isolate the target information from the rest of the recorded information, we need first to understand what kinds of energy are recorded by the sensor (a satellite is this case). Conceptually, we will separate the information recorded in energy paths, as described by \cite{Schott}. The energy paths, or electromagnetic energy, most influential in the $0.4-2.5\mu m$ spectral region are the solar energy paths (a.k.a. reflective paths), which are radiation originated from the sun that could reach the satellite camera. \autoref{fig:paths} shows the most significant solar energy paths. The type A photons in the figure originate in the sun, pass through the atmosphere, reflect off the target on Earth's surface, and propagate through the atmosphere in the direction of the sensor. This is the path that carries information about the target of interest. Type B photons in the figure are photons originating in the sun, scattered by the atmosphere in the direction of the target, and then reflected by the target in the direction of the sensor. These photons are referred to as {\it skylight}\index{skylight} or {\it sky shine}. Type C is another group of photons that are significant in total signal recorded by the sensor. These photons originate in the sun, and are scattered by the atmosphere into the camera's line of sight, without ever interacting with the target. This path is referred as {\it upwelled radiance}\index{upwelled radiance}, and it is a function of how ``hazy'' the atmosphere is.
+The main goal of remote sensing is to extract information about a specific target from all information recorded by an imaging system. In order to only isolate the target information from the rest of the recorded information, we need first to understand what kinds of energy are recorded by the sensor (a satellite is this case). Conceptually, we will separate the information recorded in energy paths, as described by \cite{Schott}. The energy paths, or electromagnetic energy, most influential in the $0.4-2.5\mu m$ spectral region are the solar energy paths (a.k.a. reflective paths), which are radiation originated from the sun that could reach the satellite camera. \autoref{fig:paths} shows the most significant solar energy paths. The type A photons in the figure originate in the sun, pass through the atmosphere, reflect off the target on Earth's surface, and propagate through the atmosphere in the direction of the sensor. This is the path that carries information about the target of interest. Type B photons in the figure are photons originating in the sun, scattered by the atmosphere in the direction of the target, and then reflected by the target in the direction of the sensor. These photons are referred to as {\it skylight}\index{skylight} or {\it sky shine}. Type C is another group of photons that are significant in total signal recorded by the sensor. These photons originate in the sun, and are scattered by the atmosphere into the camera's line of sight, without ever interacting with the target. This path is referred as {\it upwelled radiance}\index{radiance!upwelled}, and it is a function of how ``hazy'' the atmosphere is.
 
 Another photon path that could be added to the total signal is the photons that originate in the sun, propagate to the atmosphere, reflect off background objects in the direction of the target and are then reflected from the target of interest back through the atmosphere to the sensor. These photons are labeled as type G photons in \autoref{fig:paths}. As you can see, this path involves multiple reflection or bounces of the photons. 
 
@@ -159,9 +159,9 @@ Once the incident energy is transmitted through the water surface, i.e. $L_w$ in
   \label{fig:WaterColumn}
 \end{figure}
 
-Path $I$ represents the bottom effect caused by the incident light that penetrates the water surface, is transmitted through the water column, reflected by the bottom, transmitted through the water column, and leaves the water into the sensor direction. This contribution depends on the depth and the clarity of the water. This signal can be significant in shallow Case 2 waters, i.e. depth $<10-15m$, where there is not much organic and/or inorganic suspended particles within the water column, and it can be used to extract information about the bottom composition or bathymetry, for instance. However, for water quality studies, this is a signal that needs to be avoided or isolated from the total signal. In the present study, this path will be assumed to have zero contribution to the water-leaving signal because the water bodies of interest are deep enough to not allow the incident light to interact with the bottom or the water have a significant concentration of suspended particles (i.e. $>0.1mg/L$ (\cite{Pahlevan:2012})).
+Path $I$ represents the bottom effect caused by the incident light that penetrates the water surface, is transmitted through the water column, reflected by the bottom, transmitted through the water column, and leaves the water into the sensor direction. This contribution depends on the depth and the clarity of the water. This signal can be significant in shallow Case 2 waters, i.e. depth $<10-15m$, where there is not much organic and/or inorganic suspended particles within the water column, and it can be used to extract information about the bottom composition or bathymetry, for instance. However, for water quality studies, this is a signal that needs to be avoided or isolated from the total signal. In the present study, this path will be assumed to have zero contribution to the water-leaving signal because the water bodies of interest are deep enough to not allow the incident light to interact with the bottom or the water have a significant concentration of suspended particles (i.e. $>0.1mg/L$ \cite{Pahlevan:2012}). In the case that there is any bottom contribution in the scene, it will be masked out before the processing.
 
-Path $II$ represents the interaction of the incident light with CDOM. CDOM is considered to only be an absorber, and not a scatterer. Therefore, it is an important component in light attenuation in the ultra-violet (UV) and the blue regions of the spectrum of light, therefore it is a important optical constituent of the water that often dominates absorption in the blue. In practice, CDOM is defined operationally as the material that passes through a filter most often with pore size of $0.2\mu m$. Over the interval $[350nm,700nm]$, the CDOM absorption coefficient is described by an exponential decreasing function ([Jerlov, 1996]\todo{Cite Jerlov})
+Path $II$ represents the interaction of the incident light with \gls{cdom}. \gls{cdom} is considered to only be an absorber, and not a scatterer. Therefore, it is an important component in light attenuation in the \gls{uv} and the blue regions of the spectrum of light, therefore it is a important optical constituent of the water that often dominates absorption in the blue. In practice, \gls{cdom} is defined operationally as the material that passes through a filter most often with pore size of $0.2\mu m$. Over the interval $[350nm,700nm]$, the \gls{cdom} absorption coefficient is described by an exponential decreasing function [Jerlov, 1996]\todo{Cite Jerlov}.
 \begin{equation}
   a_{CDOM}(\lambda) = a_{CDOM}(\lambda_0)\exp{\left[-S_{CDOM}(\lambda-\lambda_0)\right]}
 \end{equation}
@@ -174,11 +174,11 @@ where $S_{CDOM}$ is spectral slope and $\lambda_0$ is the reference wavelength. 
       \label{fig:compabs}
 \end{figure}
 
-Path $III$ illustrates the influence of inorganic suspended particles (or suspended material (SM) or minerals) on the incident light, but it could also include organic particles. These particles can scatter and/or absorb light, and they vary in size, composition, and distribution, which can influence the optical properties of the water, being different for different particles. For example, the optical properties of clay are different from silt (\cite{Pahlevan:2012}). \autoref{fig:compabs} shows examples of minerals absorption coefficient for Case 2 waters (labeled as ``Min'' on the right-hand figure). The inorganic suspended particles are often included within the non-algal particles (NAP), which are defined operationally as the particulate material that is not extracted by methanol in the spectrophotometric measurement of particles on filter pads ([Kishino {\it et al}., 1985]\todo{Cite Kishino}). The NAP absorption coefficient spectrum is often described by a exponential decreasing function, i.e.
+Path $III$ illustrates the influence of inorganic suspended particles (a.k.a. \gls{sm} or minerals) on the incident light, but it could also include organic particles. These particles can scatter and/or absorb light, and they vary in size, composition, and distribution, which can influence the optical properties of the water, being different for different particles. For example, the optical properties of clay are different from silt \cite{Pahlevan:2012}. \autoref{fig:compabs} shows examples of minerals absorption coefficient for Case 2 waters (labeled as ``Min'' on the right-hand figure). The inorganic suspended particles are often included within the \gls{nap}, which are defined operationally as the particulate material that is not extracted by methanol in the spectrophotometric measurement of particles on filter pads ([Kishino {\it et al}., 1985]\todo{Cite Kishino, and Mitchell?}). The \gls{nap} absorption coefficient spectrum is often described by a exponential decreasing function, i.e.
 \begin{equation}
   a_{NAP}(\lambda) = a_{NAP}(\lambda_0)\exp{\left[-S_{NAP}(\lambda-\lambda_0)\right]}
 \end{equation}
-where $S_{NAP}$ is the exponential slope for NAP, which could be estimated from a nonlinear regression from field data. The scattering properties of particles are difficult to measure. Basically, to measure the scattering due to particles, any undissolved material is treated as particle (\cite{GeraceThesis}). An example of a scattering coefficient spectrum for minerals is shown in \autoref{fig:compscat}, for Case 1 and Case 2 waters.
+where $S_{NAP}$ is the exponential slope for NAP, which could be estimated from a nonlinear regression from field data. The scattering properties of particles are difficult to measure. Basically, to measure the scattering due to particles, any undissolved material is treated as particle \cite{GeraceThesis}, and therefore this measurement could include the scattering due to chlorophyll as well. An example of a scattering coefficient spectrum for minerals is shown in \autoref{fig:compscat}, for Case 1 and Case 2 waters.
 
 \begin{figure}[htb]
 \centering
@@ -214,7 +214,7 @@ Path $IV$ shows the case of scattering and absorption of light by pure water, wh
 
 Lastly, path $V$ in \autoref{fig:WaterColumn} illustrates the interaction of the incident light with phytoplankton. This interaction can be absorption and/or scattering. Phytoplankton can dramatically affect the optical properties of the water column. Phytoplankton absorption depends in the composition and concentration of pigments. There are different kinds of pigments. The main pigment is chlorophyll-{\it a}, and it can be used as a surrogate or proxy for phytoplankton. \autoref{fig:compabs} shows examples of chlorophyll absorption coefficient spectra (labeled as ``Chl'') for Case 1 and Case 2 water. Chlorophyll typically tends to be a strong absorber of visible light \cite{Mobley1994}, having two absorption peaks, one in the blue ($430nm$) and one in the red ($665nm$). An example scattering coefficient spectrum for chlorophyll-{\it a} is shown in \autoref{fig:compscat}, for Case 1 and Case 2 waters.
 
-\cite{Mobley1994} describes the attenuation of light when interacting with the water column constituents with its complex index of refraction, $m=n-ik$, where $n$ is the real part that governs scattering within the medium, and $k$ is the imaginary part that governs absorption in the medium. The absorption coefficient is related to the imaginary part $k$ of the index of refraction as [Kerker, 1969\todo{cite Kerker}]
+It is worthy to mention that \cite{Mobley1994} describes the attenuation of light when interacting with the water column constituents with its complex index of refraction, $m=n-ik$, where $n$ is the real part that governs scattering within the medium, and $k$ is the imaginary part that governs absorption in the medium. The absorption coefficient is related to the imaginary part $k$ of the index of refraction as [Kerker, 1969\todo{cite Kerker}]
 \begin{equation}
   a(\lambda)=\frac{4\pi k(\lambda)}{\lambda}
 \end{equation}
@@ -226,11 +226,11 @@ More details about the different water column constituents are presented in the 
 The color of water bodies could vary from the deep blue of the open ocean to yellowish-brown in a turbid estuary. Their color depend on different concentration and optical properties of dissolved and particulate matter. Bellow there is a brief description of the most important optical constituents of natural waters.
 \subsubsection*{Pure Water}
 \addcontentsline{toc}{subsubsection}{Pure Water}
-Although water itself appears colorless in our everyday life, it display a blue hue. This is due to the dominant role of molecular scattering at small wavelengths and the dominant role of molecular absorption at large wavelength values. This blue color is clearly apparent under sunny conditions in oceanic water, for instance.
+\index{Water, Pure} Although water itself appears colorless in our everyday life, it display a blue hue. This is due to the dominant role of molecular scattering at small wavelengths and the dominant role of molecular absorption at large wavelength values. This blue color is clearly apparent under sunny conditions in oceanic water, for instance.
 % ----------------------------------------------------
 \subsubsection*{Dissolved Organic Compounds}
 \addcontentsline{toc}{subsubsection}{Dissolved Organic Compounds}
-The decomposition of phytoplankton cells in the water column (or in the bottom sediments) results in the creation of a variety of complex polymers generally referred to as water humus, or humic substances (\cite{Bukata1995}). These humic substances include both water-soluble and water-insoluble fractions. Dissolved organic carbon (DOC) is part of the water-soluble fraction.  The colored portion of DOC and the only part of DOC that absorbs light is referred as colored dissolved organic matter (CDOM). Due to its yellow hue, the dissolved aquatic humus is generally referred to as yellow substance (YS), but other terms have been applied to it: gelbstoff, aquatic humic matter, yellow organic acids, humolimnic acid, gilvin, and others. The CDOM absorption is very small in the red, but it increases rapidly at lower wavelengths. CDOM could be the main absorber in the blue region of the spectrum, specially in water influenced by river runoff.
+The decomposition of phytoplankton cells in the water column (or in the bottom sediments) results in the creation of a variety of complex polymers generally referred to as water humus, or humic substances \cite{Bukata1995}. These humic substances include both water-soluble and water-insoluble fractions. \Gls{doc}\index{DOC} is part of the water-soluble fraction.  The colored portion of \gls{doc} and the only part of \gls{doc} that absorbs light is referred as \acrfull{cdom}\index{CDOM}. Due to its yellow hue, the dissolved aquatic humus is generally referred to as \gls{ys}, but other terms have been applied to it: gelbstoff, aquatic humic matter, yellow organic acids, humolimnic acid, gilvin, among others. The CDOM absorption is very small in the red, but it increases rapidly at lower wavelengths. CDOM could be the main absorber in the blue region of the spectrum, specially in water influenced by river runoff.
 % ----------------------------------------------------
 \subsubsection*{Organic Particles}
 \addcontentsline{toc}{subsubsection}{Organic Particles}
@@ -238,18 +238,18 @@ An organic substance is defined as any substance containing carbon-based compoun
 
 In clean oceanic waters where the larger phytoplankton are relatively scarce, {\it living bacteria} ($0.2-1.0\mu m$) could scatter and absorb light significantly, especially at the blue region of the light spectrum.
 
-{\it Phytoplankton} are microscopic, single cells, free-floating organisms (plants) and have a major effect on the ocean color. Phytoplankton is an important component of the oceanic food web and of the global carbon cycle, which make them the most important primary producers in the ocean, and most importantly for ocean optics, they determine the optical properties of most oceanic waters. Their size vary from less than $1\mu m$ to more than $200\mu m$ with different species, shapes and concentrations. Phytoplankton can scatter light strongly because they are in general much larger than the wavelength of visible light. They contain chlorophyll, which is a pigment that produces energy rich organic material and releases oxygen by absorbing light in a process named photosynthesis. Chlorophyll (and related pigments) have a strong absorption in the blue and red, determining the spectral absorption of water if concentration are high.
+{\it Phytoplankton}\index{Phytoplankton} are microscopic, single cells, free-floating organisms (plants) and have a major effect on the ocean color. Phytoplankton is an important component of the oceanic food web and of the global carbon cycle, which make them the most important primary producers in the ocean, and most importantly for ocean optics, they determine the optical properties of most oceanic waters, which are considered Case 1 waters. Their size vary from less than $1\mu m$ to more than $200\mu m$ with different species, shapes and concentrations. Phytoplankton can scatter light strongly because they are in general much larger than the wavelength of visible light. They contain chlorophyll\index{chlorophyll}, which is a pigment that produces energy rich organic material and releases oxygen by absorbing light in a process named photosynthesis. Chlorophyll (and related pigments) have a strong absorption in the blue and red, determining the spectral absorption of water if concentration are high.
 
-{\it Detritus} (a.k.a. {\it tripton}) is non-phytoplankton, non-living organic particles, and it constitutes a large portion of the total organic matter of ecosystems. Detritus is produced when, for example, phytoplankton die and their cells break apart. It can suffer rapidly from photooxidation losing the characteristic absorption spectrum of living phytoplankton and therefore absorbing only in the blue. However, detritus can scatter considerably.  
+{\it Detritus}\index{Detritus} (a.k.a. {\it tripton}) is non-phytoplankton, non-living organic particles, and it constitutes a large portion of the total organic matter of ecosystems. Detritus is produced when, for example, phytoplankton die and their cells break apart. It can suffer rapidly from photooxidation losing the characteristic absorption spectrum of living phytoplankton and therefore absorbing only in the blue. However, detritus can scatter considerably.  
 % ----------------------------------------------------
 \subsubsection*{Inorganic Particles}
 \addcontentsline{toc}{subsubsection}{Inorganic Particles}
 
 {\it Inorganic particles} are non-living particles created by, for example, weathering of terrestrial rocks that can enter the water as wind-blown dust settles on the sea surface, or they could be eroded soil carried by rivers to the sea or lakes. Their size could vary from less than $0.1\mu m$ to tens of micrometers. When present in high concentrations, inorganic particles could dominate water optical properties.
 
-Note that suspended matter (SM) in natural water bodies comprises both organic and inorganic material. These groups of organic and inorganic material is referred to as seston in limnology. Seston could include mineral particles of terrigenous origin, plankton, detritus (largely residual products of the decomposition of phytoplankton and zooplankton cells as well as macrophytic plants), volcanic ash particles, particulates resulting from {\it in situ} chemical reactions, and particles of anthropogenic origin (\cite{Bukata1995}). The major contributor to the water absorption and scattering properties is the particulate matter, being responsible for most of the temporal and spatial variability in these optical properties (\cite{Mobley:2001}).
+Note that \acrfull{sm} in natural water bodies comprises both organic and inorganic material. These groups of organic and inorganic material is referred to as seston in limnology. Seston could include mineral particles of terrigenous origin, plankton, detritus (largely residual products of the decomposition of phytoplankton and zooplankton cells as well as macrophytic plants), volcanic ash particles, particulates resulting from {\it in situ} chemical reactions, and particles of anthropogenic origin \cite{Bukata1995}. The major contributor to the water absorption and scattering properties is the particulate matter, being responsible for most of the temporal and spatial variability in these optical properties \cite{Mobley:2001}.
 
-The relevant water constituents for this research are referred to as color primary agents (CPAs) or optically active water constituents (OACs) and they are colored dissolved organic matter (CDOM), chlorophyll-{\it a}, and suspended matter (SM) (a.k.a. minerals or total suspended solid (TSS)).
+The relevant water constituents for this research are referred to as \acrfull{cpas}\index{CPAs} or optically \gls{oacs} and they are colored dissolved organic matter (CDOM), chlorophyll-{\it a}, and suspended matter (SM) (a.k.a. minerals or \gls{tss}).
 \todo{define Case 1 and 2}
 % ----------------------------------------------------
 \subsubsection{Atmospheric Effect and Water}
