Water classification done!

--- a/Background_and_Theory.tex
+++ b/Background_and_Theory.tex
@@ -392,6 +392,12 @@ The sky glint is a function of the sky downwelled radiance $L_d$ and it can be e
 where $L_{sg}(\lambda)$ is the TOA radiance due to sky glint, $\rho_F(\lambda)$ is the Fresnel reflection coefficient, and $\tau_2(\lambda)$ is the sensor-target transmission. The Fresnel refraction is a function of imaging geometry, wavelength, and concentration of water constituents \cite{Pahlevan:2012}. It can be considered constant over the entire spectrum, usually $\rho_F=0.002$, for calm water and nadir-viewing geometry. However, $\rho_F$ is a parameter complex to quantify for real world conditions where wave-induced actions yield a non-uniform surface. $\tau_2$ can be either measured or derived from simulations.
 \todo{mention technique to account for the sun glint when measuring Rrs}
 % ----------------------------------------------------
+\subsection{Optical Classification of Natural Waters}
+
+Several kinds of classification schemes have been suggested for natural waters based on in their optical properties, such as the spectral curve of percent transmittance of downward irradiances or vertical attenuation coefficient $K_d$ \cite{Kirk1983}. The classification used in this research was suggested by \cite{Morel:1977rw}, and refined by [Gordon and Morel, 1983]\todo{cite Gordon and Morel, 1983}~ based on the role played by phytoplankton. They suggested to be classified in two categories: Case 1 and Case 2 waters\index{Water Classification! Case 1 and Case 2}. {\it Case 1} waters are waters where phytoplankton and their derivative products (e.g. organic detritus and dissolved yellow color) is the main driver, playing a dominant role in determining the optical properties of the ocean \cite{Kirk1983}. On the other hand, in {\it Case 2} waters, phytoplankton and their derivative products may or may not play a dominant role, and the main drivers could also be suspended sediments and/or \gls{cdom}.
+
+
+% ----------------------------------------------------
 \subsection{Water Constituents Retrieval}
 % See \cite{Jensen} and \cite{Mustard2001}.
 % ----------------------------------------------------
